--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,3 +5,15 @@
   width: 100%;
   background-color: #f5f5f5;
 }
+
+body {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
