--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url("components/App/App.css");
 @import url("components/Header/Header.css");
+@import url("components/Logo/Logo.css");
+@import url("components/Navigation/Navigation.css");
 @import url("components/Main/Main.css");
 @import url("components/Footer/Footer.css");
 
