--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @import url("components/Logo/Logo.css");
 @import url("components/Navigation/Navigation.css");
 @import url("components/Main/Main.css");
+@import url("components/AboutMe/AboutMe.css");
 @import url("components/Footer/Footer.css");
 
