--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,9 @@
 @import url("components/Navigation/Navigation.css");
 @import url("components/Main/Main.css");
 @import url("components/AboutMe/AboutMe.css");
+@import url("components/SectionTitle/SectionTitle.css");
+@import url("components/SectionSubtitle/SectionSubtitle.css");
+@import url("components/Resume/Resume.css");
+@import url("components/ResumeCard/ResumeCard.css");
+@import url("components/ResumeCertificate/ResumeCertificate.css");
 @import url("components/Footer/Footer.css");
-
