--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -7,3 +7,9 @@
   margin: 60px auto 0;
   padding-bottom: 60px;
 }
+
+.resume__content:last-of-type {
+  padding-bottom: 100px;
+  margin: 0px auto 0;
+}
+
