--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@
 @import url("components/ResumeCertificate/ResumeCertificate.css");
 @import url("components/Portfolio/Portfolio.css");
 @import url("components/PortfolioCard/PortfolioCard.css");
+@import url("components/ContactForm/ContactForm.css");
+@import url("components/InputField/InputField.css");
 @import url("components/Footer/Footer.css");
