--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,3 +17,27 @@ a {
 li {
   list-style: none;
 }
+
+.triangle {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 300px solid transparent;
+  border-bottom: 300px solid transparent;
+  border-right: 500px solid #54ca95;
+  z-index: 20;
+  top: 100px;
+  right: 40px;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.rotation {
+  animation: rotation 20s linear infinite;
+}
