--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -1,5 +1,6 @@
 .resume {
   background-color: #fcfcfc;
+  border-radius: 40px;
 }
 
 .resume__content {
@@ -10,6 +11,6 @@
 
 .resume__content:last-of-type {
   padding-bottom: 100px;
-  margin: 0px auto 0;
+  margin: 0 auto 0;
 }
 
