--- a/src/components/ResumeCard/ResumeCard.css
+++ b/src/components/ResumeCard/ResumeCard.css
@@ -4,16 +4,34 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  grid-column-gap: 60px;
-  grid-row-gap: 32px;
+  grid-column-gap: 30px;
+  grid-row-gap: 15px;
 }
 
 .resume-card {
-  border-radius: 20px;
-  border: 2px solid #eee;
   padding: 20px;
-  box-shadow: 3px 5px rgba(238, 238, 238, 0.6);
   transition: 0.5s ease-in-out;
+}
+
+.resume-card:before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 100%;
+  background-color: #f5f5f5;
+  width: 1px;
+  left: 15px;
+}
+
+.resume-card:after {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 1px;
+  background-color: #f5f5f5;
+  width: calc(100% - 15px);
+  left: 15px;
+  bottom: 3px;
 }
 
 .resume-card:hover {
@@ -26,7 +44,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
 }
 
 .resume-card__period {
@@ -39,6 +56,7 @@
   line-height: 23px;
   border: 2px solid #54ca95;
   border-radius: 30px;
+  z-index: 100;
 }
 
 .resume-card__place {
