--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,9 @@
 .footer {
-  background-color: #54ca95;
-
+  background-color: #12a3ef;
 }
 
 .footer__copyright{
-  background-color: #54ca95;
+  background-color: #12a3ef;
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
@@ -12,5 +11,4 @@
   padding-top: 20px;
   padding-bottom: 20px;
   max-width: 1280px;
-
 }
