--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -11,12 +11,13 @@
 .navigation__link {
   margin-right: 40px;
   font-size: 14px;
-  font-weight: 400;
   font-style: normal;
-  color: #333;
+  color: #000;
+  font-weight: bold;
   letter-spacing: 0;
   opacity: 0.8;
   transition: 0.5s ease-in-out;
+  text-transform: uppercase;
 }
 
 .navigation__links > li:nth-child(4) > a {
@@ -25,5 +26,5 @@
 
 .navigation__link:hover {
   opacity: 1;
-  color: #54ca95;
+  color: #f0ff00;
 }
