--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -1,12 +1,13 @@
 .section__title {
-  color: #333;
+  color: #000;
   font-size: 44px;
-  font-weight: 600;
+  font-weight: bold;
   font-style: normal;
   letter-spacing: 0;
   margin: 0 auto;
   max-width: 1647px;
   padding-top: 80px;
   padding-bottom: 30px;
-  border-bottom: 2px solid #eee;
+  border-bottom: 2px solid #000;
+  text-transform: uppercase;
 }
