--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -105,3 +105,40 @@
     right: 30px;
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .about-me__container {
+    max-width: 1024px;
+    padding-top: 50px;
+    margin: 0 auto;
+    padding-bottom: 60px;
+  }
+
+  .about-me__personal-photo {
+    width: 350px;
+    height: 350px;
+    margin-left: 50px;
+  }
+
+  .about-me__name {
+    margin-bottom: 20px;
+  }
+
+  .about-me__information {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .about-me__description {
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.75em;
+    color: #000;
+    margin-bottom: 50px;
+  }
+
+  .arrow-down {
+    display: none;
+  }
+}
