--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,3 +12,9 @@
   padding-bottom: 20px;
   max-width: 1280px;
 }
+
+@media screen and (max-width: 1440px) {
+  .footer__copyright {
+    margin-left: 40px;
+  }
+}
