--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,3 +6,9 @@
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
+@media screen and (max-width: 1024px) {
+  .header__container {
+    padding-bottom: 20px;
+  }
+}
