--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -11,3 +11,15 @@
   border-bottom: 2px solid #000;
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 1440px) {
+  .section__title {
+    margin: 0 40px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .section__title {
+    padding-top: 50px;
+  }
+}
