--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -28,3 +28,9 @@
   opacity: 1;
   color: #f0ff00;
 }
+
+@media screen and (max-width: 425px) {
+  .navigation__link {
+    margin-right: 20px;
+  }
+}
