--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -142,3 +142,52 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .about-me {
+    margin: 0 auto;
+    padding: 20px 0 32px 0;
+  }
+
+  .about-me__container {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+  }
+
+  .about-me__personal-photo {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+
+  .about-me__name {
+    font-size: 32px;
+    line-height: 56px;
+    margin-bottom: 20px;
+  }
+
+  .about-me__description {
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    line-height: 1.75em;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+
+  .about-me__information {
+    margin: 20px 20px 0 20px;
+  }
+
+  .about-me__links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-me__link {
+    margin-right: 0;
+  }
+}
