--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,3 +12,10 @@
     padding-bottom: 20px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .header__container {
+    padding-top: 20px;
+    padding-bottom: 0;
+  }
+}
