--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -23,3 +23,17 @@
     padding-top: 50px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .section__title {
+    font-size: 42px;
+    font-weight: bold;
+    font-style: normal;
+    margin: 0 auto;
+    width: 100%;
+    padding-top: 32px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #000;
+    text-align: center;
+  }
+}
