--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -143,10 +143,30 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
+  .about-me__personal-photo {
+    width: 280px;
+    height: 280px;
+    margin-top: 50px;
+  }
+
+  .about-me__name {
+    font-size: 40px;
+  }
+
+  .about-me__links {
+    display: flex;
+  }
+
+  .about-me__link {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .about-me {
     margin: 0 auto;
-    padding: 20px 0 32px 0;
+    padding: 20px 0 52px 0;
   }
 
   .about-me__container {
@@ -174,7 +194,7 @@
     font-weight: 500;
     font-style: normal;
     line-height: 1.75em;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     margin-top: 0;
   }
 
@@ -189,5 +209,11 @@
 
   .about-me__link {
     margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .about-me__link {
+    font-size: 14px;
   }
 }
