--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -137,3 +137,15 @@
     margin: 16px auto;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .contact__content {
+    margin: 40px auto 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .contact__information {
+    padding: 40px 0 30px;
+  }
+}
