--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -18,7 +18,6 @@
 
 .about-me__information {
   margin-left: 90px;
-  z-index: 100;
 }
 
 .about-me__specialty {
@@ -30,7 +29,7 @@
 }
 
 .about-me__name {
-  font-size: 48px;
+  font-size: 58px;
   line-height: 56px;
   margin-top: 0;
   margin-bottom: 40px;
@@ -38,7 +37,7 @@
 }
 
 .about-me__description {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   font-style: normal;
   line-height: 1.75em;
@@ -91,11 +90,13 @@
 }
 
 .arrow-down {
-  width: 350px;
-  height: 350px;
-  position: absolute;
-  top: 360px;
-  left: -40px;
+  width: 150px;
+  height: 150px;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 @keyframes moveRightAndBack {
