--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,13 @@
 .footer {
-  background-color: #12a3ef;
+  background-color: #ca5be8;
 }
 
 .footer__copyright{
-  background-color: #12a3ef;
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 200px;
   padding-bottom: 20px;
   max-width: 1280px;
 }
