--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,7 @@
 @media screen and (max-width: 1024px) {
   .header__container {
     padding-bottom: 20px;
+    margin: 0 40px 0 40px;
   }
 }
 
@@ -17,5 +18,6 @@
   .header__container {
     padding-top: 20px;
     padding-bottom: 0;
+    margin: 0 10px 0 10px;
   }
 }
